# qgis-osm-conflator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
osm-conflator/: OSMConflatorPlugin.py  __init__.py  dialog.py  metadata.txt
osm-conflator/conflation/: __init__.py
osm-conflator/login/: __init__.py
osm-conflator/postpass/: __init__.py  query_builder.py
osm_conflator/: OSMConflatorPlugin.py  __init__.py  dialog.py
osm_conflator/postpass/: __init__.py  client.py  query_builder.py
